<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>create3_state_machine</name>
  <version>0.0.0</version>
  <description>This package containts a simple state machine and ables to command the robot to drive and draw a letter.</description>
  <maintainer email="dbaret@ethz.ch">Davide Baret</maintainer>
  <license>ToDo</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>


  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>irobot_create_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>create3_state_machine_msgs</depend>
  <depend>irobot_create_gazebo_bringup</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
